--- a/poneraprueba.html
+++ b/poneraprueba.html
@@ -44,11 +44,11 @@
                 </div>
             </div>
             <div id="grupo-imagen-juego">
-                <img class="imagen-juego" id="imagen1" ondragstart="arrastrar(event)" src="./imagenes/rompe2.png" alt="imagen-rompecabezas-2">
+                <img class="imagen-juego" id="imagen1" src="./imagenes/rompe2.png" alt="imagen-rompecabezas-2">
                 <img class="imagen-juego" id="imagen2" src="./imagenes/Rompe1.png" alt="imagen-rompecabezas-1">
                 <img class="imagen-juego" id="imagen3" src="./imagenes/Rompe3.png" alt="imagen-rompecabezas-3">
             </div>
-            <button id="reiniciar">Reiniciar</button>
+            <button id="reiniciar" onclick="reiniciar()">Reiniciar</button>
         </div>
     </main>
     <footer>
